@@ -14,6 +14,7 @@
             Added tmp dir for temp files during snap_run
             Added log dir for the created log file (Plan to keep x amount of logs)
             Added run dir for static data regarding last run
+            Path added due to issue with snapraid.exe runnig smartctl
 
 05/05/2016 v0.1
             Added emailing function for gmail and sendmail.
